[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = ""
authors = ["Raynor <jonggu.woo@fitpet.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.12.0"
langchain = "^1.2.0"
langgraph = "^1.0.5"
langchain-ollama = "^1.0.1"
langchain-google-genai = "^4.1.1"
langchain-community = "^0.4.1"
langchain-text-splitters = "^1.1.0"
langchain-experimental = "^0.4.1"
python-dotenv = "^1.2.1"
tavily-python = "^0.7.17"
beautifulsoup4 = "^4.14.3"
fake-useragent = "^2.2.0"
pymysql = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
